[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "date-conversion-utils"
version = "0.1.0"
description = "Small date and year conversion helpers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
Homepage = "https://github.com/larsderidder/date-conversion-utils"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
